<?xml version="1.0"?>
<!--
#********************************************************************************
#* Copyright (C) 2017-2020 German Aerospace Center (DLR). 
#* Eclipse ADORe, Automated Driving Open Research https://eclipse.org/adore
#*
#* This program and the accompanying materials are made available under the 
#* terms of the Eclipse Public License 2.0 which is available at
#* http://www.eclipse.org/legal/epl-2.0.
#*
#* SPDX-License-Identifier: EPL-2.0 
#*
#* Contributors: 
#*   Daniel Heß - initial API and implementation
#*   Eric Neidhardt - implementation
#********************************************************************************
-->
<package format="2">
  <name>keepmoving_if_ros</name>
  <version>0.2.0</version>
  <description>Package for coupling of ADORe automated driving framework with public transportation dispatching backend via ROS.</description>
  <maintainer email="adore-dev@eclipse.org">Eric Neidhardt</maintainer>
  <license>EPLv2.0</license>
  <depend>adore_if_ros_msg</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
